fixes in PlayerSceneController